# codecov_snippet

./: .gitignore  README.md  codecov.yml
.github/.workflows/: on_push.yml
.github/workflows/: on_push.yml
codecov/: .coveragerc  Dockerfile  README.md  action.yml  entrypoint.sh
coverage/: README.md  generate_coverage.sh
lib/project01/: .coverage  pyproject.toml
lib/project01/project01/: __init__.py  functions.py
lib/project01/tests/: test_functions.py
lib/project02/: pyproject.toml
lib/project02/project02/: __init__.py  functions2.py
lib/project02/tests/: test_functions2.py
project01/: pyproject.toml
project01/project01/: __init__.py  functions.py
project01/tests/: test_functions.py
project02/: pyproject.toml
project02/project02/: functions2.py
