[tool.poetry]
name = "project02"
version = "1.0"
description = "Snippet of project02"
authors = ["Michel Galle <michel.galle@cherre.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
